Add container text

--- a/JavaScript/Countdown Timer/style.css
+++ b/JavaScript/Countdown Timer/style.css
@@ -7,6 +7,7 @@
 body {
     background-image: url(./Images/New\ Years.jpg);
     font-family: 'Antonio', sans-serif;
+    color:aliceblue;
     margin: 0;
     background-size: cover;
     height: 98vh;
