--- a/JavaScript/Countdown Timer/style.css
+++ b/JavaScript/Countdown Timer/style.css
@@ -10,7 +10,7 @@ body {
   font-family: "Antonio", sans-serif;
   color: beige;
   display: flex;
-  flex-direction: column;
+  flex-direction: column-reverse;
   align-items: center;
   margin: 0;
   background-size: cover;
@@ -18,6 +18,7 @@ body {
 }
 
 h1 {
+  font-weight: normal;
   font-size: 6rem;
 }
 
@@ -26,7 +27,8 @@ h1 {
 }
 
 .big-text {
-  font-size: 6rem;
+  font-weight: bold;
+  font-size: 5rem;
   line-height: 1;
   margin: 0 2rem;
 }
@@ -36,5 +38,5 @@ h1 {
 }
 
 .countdown-element span {
-  font-size: 1.5rem;
+  font-size: 1.3rem;
 }
