Add countdown function

--- a/JavaScript/Countdown Timer/style.css
+++ b/JavaScript/Countdown Timer/style.css
@@ -5,7 +5,7 @@
 }
 
 body {
-  background-image: url(./Images/New\ Years.jpg);
+  background-image: url(./Images/New\ Years-2.jpg);
   background-position: center center;
   font-family: "Antonio", sans-serif;
   color: beige;
